2004-10-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/wm.n (iconphoto):           added support for Tk photo
	* generic/tkInt.h (TkDisplay):    images as titlebar icons. TIP #159
	* win/tkWinWm.c (WmIconphotoCmd): wm iconphoto ?-default? image1 ...
	* macosx/tkMacOSXWm.c (WmIconphotoCmd): Implemented for Win/Unix,
	* unix/tkUnixWm.c (WmIconphotoCmd):     stubbed out for OS X.
	* tests/wm.test, tests/unixWm.test, tests/winWm.test: [Bug 815751]

2004-10-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTextWind.c (EmbWinDelayedUnmap): Fix init warnings
	* generic/tkTextTag.c (TkTextCreateTag): 
	* generic/tkTextMark.c (TkTextSetMark): 
	* generic/tkTextIndex.c (GetIndex): 
	* generic/tkUndo.c (EvaluateActionList): 

2004-09-24  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkCursor.c:  Add missing initialization in debug routine.

2004-09-24  Vince Darley  <vincentdarley@users.sourceforge.net>

	* library/text.tcl: corrected mousewheel scrolling [Bug 960190]

	* tests/textDisp.test: made some tests more robust to slowness
	in asynchronous height calculation callbacks [Bug 1025781]

2004-09-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinX.c: Added declaration for advapi32 now that this file
	uses the Reg* functions (req'd for nmake build system).

2004-09-23  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkTest.c
	* tests/text.test: fix and tests for [Bug 1026485] -- negative 
	text search ranges should not lead to any matches.

2004-09-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinInt.h (TkWinDisplayChanged): added decl
	* win/tkWinX.c (TkWinDisplayChanged, TkpOpenDisplay): Correctly
	* win/tkWinWm.c (InvalidateSubTreeDepth, WmProc):     handle color
	and screen resolution changes.  Tested for 16/24/32 bpp changes on
	XP.  May need more fixes for 8bpp switch, use of special
	colormaps, or other special palette handling cases.  [Bug 223689]
	
2004-09-21  Mo DeJong  <mdejong@users.sourceforge.net>
