@@ -1,3 +1,8 @@
+2004-10-08  Joe English  <jenglish@users.sourceforge.net>
+
+	* unix/tkUnixRFont.c: TIP #205 "Use pkgconfig Database to 
+	Register Xft Support".
+
 2004-10-05  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* doc/wm.n (iconphoto):           added support for Tk photo
